--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^4.6.1",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/sqlite3": "^3.1.8",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "prisma": "^4.6.1",
     "sqlite3": "^5.1.2",
     "sqlstring": "^2.3.3"
