--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "dependencies": {
     "@prisma/client": "^4.6.1",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/moment": "^2.13.0",
     "@types/sqlite3": "^3.1.8",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "prisma": "^4.6.1",
     "sqlite3": "^5.1.2",
     "sqlstring": "^2.3.3"
