--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   "dependencies": {
     "@prisma/client": "^4.6.1",
     "@sendgrid/mail": "^7.7.0",
-    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
+    "@types/crypto-js": "^4.1.1",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/moment": "^2.13.0",
     "@types/sqlite3": "^3.1.8",
-    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
